    - Cache:
      - 'verify_signature': don't error but only warn when gpg doesn't give
        enough info for some reason. Thanks to Cyril Brulebois.
      - don't hardcode archive 'experimental' for Releases that shouldn't be
        pinned as 'not for automatic upgrades', but use 'NotAutomatic' flag
        in the Release file instead.
    - Config:
      - Recognize 'acquire::pdiffs' option, though it's unsupported.
  * debian/control:
    - Added Vcs-* headers.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Tue, 28 Jul 2009 15:14:30 +0300

cupt (0.4.0.1) unstable; urgency=low

  * Typo fix: 'syncroniz*' -> 'synchroniz*'.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Thu, 23 Jul 2009 23:20:01 +0300

cupt (0.4.0) unstable; urgency=medium

  * cupt
    - Allowed to purge packages with no installation candidates.
  * Cupt:
    - System:
      - Worker:
        - 'get_unpacked_sizes_preview': fixed crash when purging a package
          that has no installation candidates.
        - 'update_release_and_index_data': don't check hash sums for indexes
          in simulate mode to "proceed" all actions, not only Release-related
          ones.
      - Resolver:
        - Generate an error when attempting to schedule more than one action
          on the same package.
        - Honor the 'cupt::resolver::synchronize-source-versions' option.
    - Config:
      - Added 'apt::acquire::translation' configuration option.
      - New 'cupt::resolver::synchronize-source-versions' configuration option.
      - The option 'cupt::resolver::defer-triggers' now defaults to false due
        to unfixed dpkg bug (#526774) that can cause upgrade breakage.
    - Cache:
      - BinaryVersion:
        - Implemented localized descriptions support.
      - ArchitecturedRelation:
        - Fixed parsing of architectured relation expressions which contain
          relation sign.
      - Package:
        - Fixed error while parsing 'Architecture: any' source version,